integrate with tensorflow

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -11,7 +11,6 @@ get_filename_component(LAMMPS_LIB_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../lib 
 get_filename_component(LAMMPS_LIB_BINARY_DIR ${CMAKE_BINARY_DIR}/lib ABSOLUTE)
 get_filename_component(LAMMPS_DOC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../doc ABSOLUTE)
 
-
 # To avoid conflicts with the conventional Makefile build system, we build everything here
 file(GLOB LIB_SOURCES ${LAMMPS_SOURCE_DIR}/[^.]*.cpp)
 file(GLOB LMP_SOURCES ${LAMMPS_SOURCE_DIR}/main.cpp)
@@ -163,6 +162,19 @@ set(LAMMPS_LINK_LIBS)
 set(LAMMPS_DEPS)
 set(LAMMPS_API_DEFINES)
 
+find_package(TensorflowCC COMPONENTS Shared)
+if(TensorflowCC_Shared_FOUND)
+  list(APPEND LAMMPS_LINK_LIBS TensorflowCC::Shared)
+endif()
+
+# link cuda if it is available
+find_package(CUDA)
+if(CUDA_FOUND)
+  list(APPEND LAMMPS_LINK_LIBS ${CUDA_LIBRARIES})
+endif()
+
+# list(APPEND LAMMPS_LINK_LIBS TensorflowCC::Shared)
+
 set(DEFAULT_PACKAGES ASPHERE BODY CLASS2 COLLOID COMPRESS DIPOLE GRANULAR
   KSPACE MANYBODY MC MEAM MESSAGE MISC MOLECULE PERI REAX REPLICA RIGID SHOCK
   SPIN SNAP SRD KIM PYTHON MSCG MPIIO VORONOI POEMS LATTE USER-ATC USER-AWPMD
@@ -170,7 +182,7 @@ set(DEFAULT_PACKAGES ASPHERE BODY CLASS2 COLLOID COMPRESS DIPOLE GRANULAR
   USER-DPD USER-DRUDE USER-EFF USER-FEP USER-H5MD USER-LB USER-MANIFOLD
   USER-MEAMC USER-MGPT USER-MISC USER-MOFFF USER-MOLFILE USER-NETCDF
   USER-PHONON USER-PTM USER-QTB USER-REAXC USER-SCAFACOS USER-SMD USER-SMTBQ
-  USER-SPH USER-TALLY USER-UEF USER-VTK USER-QUIP USER-QMMM)
+  USER-SPH USER-TALLY USER-UEF USER-VTK USER-QUIP USER-QMMM TF)
 set(ACCEL_PACKAGES USER-OMP KOKKOS OPT USER-INTEL GPU)
 set(OTHER_PACKAGES CORESHELL QEQ)
 foreach(PKG ${DEFAULT_PACKAGES})
@@ -1398,3 +1410,4 @@ endif()
 if(PKG_KSPACE)
   message(STATUS "Using ${FFT} as FFT")
 endif()
+
